<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startup.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/bannerImageSU"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/insta_face_symbol"
        android:layout_marginTop="60dp"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/emailInputSU"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/bannerImageSU"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:hint="@string/email"
        android:background="@drawable/input_round_shape"
        android:textColorHint="@color/text_grey"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressBarSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
    />
    <EditText
        android:id="@+id/passwordInputSU"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputSU"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:password="true"
        android:hint="@string/password"
        android:singleLine="true"
        android:background="@drawable/input_round_shape"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:textColor="@color/text_grey"
        android:textColorHint="@color/text_grey"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:id="@+id/confirmPasswordInputSU"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/passwordInputSU"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:password="true"
        android:hint="@string/confirm_password"
        android:singleLine="true"
        android:background="@drawable/input_round_shape"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:textColor="@color/text_grey"
        android:textColorHint="@color/text_grey"
        app:layout_constraintRight_toRightOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signinButtonSU"
        android:layout_width="195dp"
        android:layout_height="53dp"
        android:background="@drawable/button_round_shape"
        android:text="@string/create_account"
        android:fontFamily="@font/aftertir_bold"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputSU"
        android:layout_marginTop="55dp"
        />

    <TextView
        android:id="@+id/accountTextSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="#403F3F"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/loginTextSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="#4527A0"
        android:layout_marginLeft="5dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/accountTextSU"
        app:layout_constraintLeft_toRightOf="@id/accountTextSU"
        />



</androidx.constraintlayout.widget.ConstraintLayout>