<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePost">

    <EditText
        android:id="@+id/postInput"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/aftetir"
        android:background="@drawable/edittext_round_shape"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="12dp"
        android:gravity="top"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="@string/post_what_s_happening"
        />
    <ImageView
        android:backgroundTint="@color/white"
        android:id="@+id/postImagePreview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />



    <TextView
        android:id="@+id/postImageContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/postInput"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/actionCard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/edittext_round_shape"
        android:gravity="top"
        android:elevation="9dp"
        app:itemIconTint="@drawable/bottom_navigation_color_selector"
        app:cardBackgroundColor="@color/white"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/postImageButton"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableLeft="@drawable/ic_gallery"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/postImageText"
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/postImageButton"
                android:text="@string/upload_image"
                android:fontFamily="@font/aftetir"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/postImageButton"
                />
            <Button
                android:id="@+id/postEditButton"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:layout_marginLeft="40dp"
                android:drawableLeft="@drawable/ic_feather"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:layout_constraintLeft_toRightOf="@+id/postImageButton"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/postEditText"
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/postEditButton"
                android:text="@string/write_post"
                android:fontFamily="@font/aftetir"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/postEditButton"
                />
            <Button
                android:id="@+id/postButton"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:layout_marginLeft="110dp"
                android:drawableLeft="@drawable/ic_send"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:backgroundTint="@color/white"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/postSendText"
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/postButton"
                android:text="@string/send_post"
                android:fontFamily="@font/aftetir"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/postButton"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>